<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feels_like">Feels Like</string>
    <string name="teperature">Teperature</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="todo">TODO</string>
    <string name="sunny">Sunny</string>
    <string name="threads">Threads</string>
    <string name="in_main_thread">In Main Thread</string>
    <string name="from_thread">From Thread %d</string>
    <string name="in_thread">In Thread %s</string>
    <string name="calculate_in_thread">Calculate in Thread %s</string>
    <string name="my_handler_thread">My_Handler_Thread</string>
    <string name="hello_from_thread_fragment">Hello from ThreadsFragment</string>
    <string name="calculate">Calculate</string>
    <string name="default_number">1</string>
    <string name="calc_in_thread">Calculate in Thread</string>
    <string name="handler_thread">Handler_Thread</string>
    <string name="service">Service</string>
    <string name="service_broadcast">Service + Broadcast</string>
    <string name="go_to_threads">Go to Threads</string>
    <string name="back">Back</string>
    <string name="visible_image">Visible Image</string>
    <string name="history">History</string>
    <string name="phonebook">PhoneBook</string>
    <string name="map">Map</string>
    <string name="default_adress">Default Address</string>
    <string name="search">Search</string>
    <string name="Something">TODO</string>


</resources>