<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_world_background">

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculate"
                android:textSize="20sp"
                tools:ignore="VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="2"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:text="@string/default_number"
                android:textSize="20sp"
                tools:ignore="VisualLintTextFieldSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                tools:text="0" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calcThreadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/calc_in_thread"
            android:textSize="20sp" />

        <Button
            android:id="@+id/calcThreadHandler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/handler_thread"
            android:textSize="20sp" />

        <Button
            android:id="@+id/serviceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/service" />

        <Button
            android:id="@+id/serviceWithBroadcastButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/service_broadcast"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>
